Reorganize openapi definition
