# baremaps-openapi/src/main/resources/openapi.yaml
@@ -32,7 +32,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/landingPage'
+                $ref: 'schemas/landingPage.yaml'
               example:
                 title: Styles API example
                 links:
@@ -86,7 +86,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/confClasses'
+                $ref: 'schemas/confClasses.yaml'
               example:
                 conformsTo:
                   - 'http://www.opengis.net/spec/ogcapi-styles-1/1.0/conf/core'
@@ -130,13 +130,13 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/collections'
+                $ref: 'schemas/collections.yaml'
         "500":
           description: A server error occurred
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/exception'
+                $ref: 'schemas/exception.yaml'
     post:
       tags:
         - Collections
@@ -178,7 +178,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/collection'
+              $ref: 'schemas/collection.yaml'
   '/collections/{collectionId}':
     get:
       tags:
@@ -198,7 +198,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/collection'
+                $ref: 'schemas/collection.yaml'
         '404':
           description: |-
             collection not found
@@ -219,7 +219,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/collection'
+              $ref: 'schemas/collection.yaml'
       responses:
         '204':
           description: |-
@@ -268,7 +268,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/style-set'
+                $ref: 'schemas/style-set.yaml'
         '406':
           description: |-
             The media types accepted by the client are not
@@ -315,7 +315,7 @@ paths:
         content:
           application/vnd.mapbox.style+json:
             schema:
-              $ref: '#/components/schemas/mb-style'
+              $ref: 'schemas/mb-style.yaml'
   '/styles/{styleId}':
     get:
       tags:
@@ -337,7 +337,7 @@ paths:
           content:
             application/vnd.mapbox.style+json:
               schema:
-                $ref: '#/components/schemas/mb-style'
+                $ref: 'schemas/mb-style.yaml'
         '404':
           description: |-
             style not found
@@ -358,7 +358,7 @@ paths:
         content:
           application/vnd.mapbox.style+json:
             schema:
-              $ref: '#/components/schemas/mb-style'
+              $ref: 'schemas/mb-style.yaml'
       responses:
         '204':
           description: |-
@@ -445,7 +445,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/tileSet'
+              $ref: 'schemas/TileJSON.yaml'
   '/tilesets/{tilesetId}':
     get:
       tags:
@@ -465,7 +465,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/tileSet'
+                $ref: 'schemas/TileJSON.yaml'
         '404':
           description: |-
             tileset not found
@@ -486,7 +486,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/tileSet'
+              $ref: 'schemas/TileJSON.yaml'
       responses:
         '204':
           description: |-
@@ -572,7 +572,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/exception'
+                $ref: 'schemas/exception.yaml'
 components:
   parameters:
     collectionId:
@@ -605,497 +605,3 @@ components:
       schema:
         type: string
         format: uuid
-  schemas:
-    collection:
-      type: object
-      required:
-        - id
-        - links
-      properties:
-        id:
-          description: identifier of the collection used, for example, in URIs
-          type: string
-          format: uuid
-          example: address
-        title:
-          description: human readable title of the collection
-          type: string
-          example: address
-        description:
-          description: a description of the features in the collection
-          type: string
-          example: An address.
-        links:
-          type: array
-          items:
-            $ref: "#/components/schemas/link"
-          example:
-            - href: http://data.example.com/buildings
-              rel: item
-            - href: http://example.com/concepts/buildings.html
-              rel: describedby
-              type: text/html
-        extent:
-          $ref: "#/components/schemas/extent"
-        itemType:
-          description: indicator about the type of the items in the collection (the default value is 'feature').
-          type: string
-          default: feature
-        crs:
-          description: the list of coordinate reference systems supported by the service
-          type: array
-          items:
-            type: string
-          default:
-            - http://www.opengis.net/def/crs/OGC/1.3/CRS84
-          example:
-            - http://www.opengis.net/def/crs/OGC/1.3/CRS84
-            - http://www.opengis.net/def/crs/EPSG/0/4326
-    collections:
-      type: object
-      required:
-        - links
-        - collections
-      properties:
-        links:
-          type: array
-          items:
-            $ref: "#/components/schemas/link"
-        collections:
-          type: array
-          items:
-            $ref: "#/components/schemas/collection"
-    confClasses:
-      type: object
-      required:
-        - conformsTo
-      properties:
-        conformsTo:
-          type: array
-          items:
-            type: string
-    exception:
-      type: object
-      required:
-        - code
-      properties:
-        code:
-          type: string
-        description:
-          type: string
-    extent:
-      type: object
-      description: |-
-        The extent of the features in the collection. In the Core only spatial and temporal
-        extents are specified. Extensions may add additional members to represent other
-        extents, for example, thermal or pressure ranges.
-      properties:
-        spatial:
-          description: |-
-            The spatial extent of the features in the collection.
-          type: object
-          properties:
-            bbox:
-              description: |-
-                One or more bounding boxes that describe the spatial extent of the dataset.
-                In the Core only a single bounding box is supported. Extensions may support
-                additional areas. If multiple areas are provided, the union of the bounding
-                boxes describes the spatial extent.
-              type: array
-              minItems: 1
-              items:
-                description: |-
-                  Each bounding box is provided as four or six numbers, depending on
-                  whether the coordinate reference system includes a vertical axis
-                  (height or depth):
-
-                  * Lower left corner, coordinate axis 1
-                  * Lower left corner, coordinate axis 2
-                  * Minimum value, coordinate axis 3 (optional)
-                  * Upper right corner, coordinate axis 1
-                  * Upper right corner, coordinate axis 2
-                  * Maximum value, coordinate axis 3 (optional)
-
-                  The coordinate reference system of the values is WGS 84 longitude/latitude
-                  (http://www.opengis.net/def/crs/OGC/1.3/CRS84) unless a different coordinate
-                  reference system is specified in `crs`.
-
-                  For WGS 84 longitude/latitude the values are in most cases the sequence of
-                  minimum longitude, minimum latitude, maximum longitude and maximum latitude.
-                  However, in cases where the box spans the antimeridian the first value
-                  (west-most box edge) is larger than the third value (east-most box edge).
-
-                  If the vertical axis is included, the third and the sixth number are
-                  the bottom and the top of the 3-dimensional bounding box.
-
-                  If a feature has multiple spatial geometry properties, it is the decision of the
-                  server whether only a single spatial geometry property is used to determine
-                  the extent or all relevant geometries.
-                type: array
-                oneOf:
-                - minItems: 4
-                  maxItems: 4
-                - minItems: 6
-                  maxItems: 6
-                items:
-                  type: number
-                example:
-                  - -180
-                  - -90
-                  - 180
-                  - 90
-            crs:
-              description: |-
-                Coordinate reference system of the coordinates in the spatial extent
-                (property `bbox`). The default reference system is WGS 84 longitude/latitude.
-                In the Core this is the only supported coordinate reference system.
-                Extensions may support additional coordinate reference systems and add
-                additional enum values.
-              type: string
-              enum:
-                - 'http://www.opengis.net/def/crs/OGC/1.3/CRS84'
-              default: 'http://www.opengis.net/def/crs/OGC/1.3/CRS84'
-        temporal:
-          description: |-
-            The temporal extent of the features in the collection.
-          type: object
-          properties:
-            interval:
-              description: |-
-                One or more time intervals that describe the temporal extent of the dataset.
-                The value `null` is supported and indicates an open time interval.
-                In the Core only a single time interval is supported. Extensions may support
-                multiple intervals. If multiple intervals are provided, the union of the
-                intervals describes the temporal extent.
-              type: array
-              minItems: 1
-              items:
-                description: |-
-                  Begin and end times of the time interval. The timestamps are in the
-                  temporal coordinate reference system specified in `trs`. By default
-                  this is the Gregorian calendar.
-                type: array
-                minItems: 2
-                maxItems: 2
-                items:
-                  type: string
-                  format: date-time
-                  nullable: true
-                example:
-                  - '2011-11-11T12:22:11Z'
-                  - null
-            trs:
-              description: |-
-                Coordinate reference system of the coordinates in the temporal extent
-                (property `interval`). The default reference system is the Gregorian calendar.
-                In the Core this is the only supported temporal coordinate reference system.
-                Extensions may support additional temporal coordinate reference systems and add
-                additional enum values.
-              type: string
-              enum:
-                - 'http://www.opengis.net/def/uom/ISO-8601/0/Gregorian'
-              default: 'http://www.opengis.net/def/uom/ISO-8601/0/Gregorian'
-    landingPage:
-      type: object
-      required:
-        - links
-      properties:
-        title:
-          type: string
-          example: Buildings in Bonn
-        description:
-          type: string
-          example: Access to data about buildings in the city of Bonn via a Web API that conforms to the OGC API Features specification.
-        links:
-          type: array
-          items:
-            $ref: "#/components/schemas/link"
-    link:
-      type: object
-      required:
-        - href
-      properties:
-        href:
-          type: string
-          example: http://data.example.com/buildings/123
-        rel:
-          type: string
-          example: alternate
-        type:
-          type: string
-          example: application/geo+json
-        hreflang:
-          type: string
-          example: en
-        title:
-          type: string
-          example: Trierer Strasse 70, 53115 Bonn
-        length:
-          type: integer
-    mb-style:
-      required:
-        - layers
-        - sources
-        - version
-      type: object
-      properties:
-        version:
-          type: number
-          example: 8
-        name:
-          type: string
-          example: night
-        sources:
-          type: object
-          additionalProperties:
-              type: object
-              properties:
-                type:
-                  type: string
-                  example: vector
-                url:
-                  type: string
-                  example: 'https://services.interactive-instruments.de/vtp/daraa/tiles/default/{z}/{y}/{x}?f=mvt'
-        sprite:
-          type: string
-          example: 'http://vtp2018.s3-eu-west-1.amazonaws.com/static/mapstorestyle/sprites/sprites'
-        glyphs:
-          type: string
-          example: 'http://fonts.openmaptiles.org/{fontstack}/{range}.pbf'
-        layers:
-          type: array
-          items:
-            $ref: '#/components/schemas/layers-array'
-        center:
-          type: array
-          items:
-            type: number
-        metadata:
-          type: object
-        zoom:
-          type: number
-    layers-array:
-      required:
-        - id
-        - type
-      type: object
-      properties:
-        id:
-          type: string
-          example: '1'
-        type:
-          type: string
-          example: fill
-          enum:
-            - fill
-            - line
-            - symbol
-            - circle
-            - heatmap
-            - fill-extrusion
-            - raster
-            - hillshade
-            - background
-        filter:
-          type: array
-          items: {}
-        source:
-          type: string
-          example: daraa
-        source-layer:
-          type: string
-          example: vegetationsrf
-        layout:
-          type: object
-        minzoom:
-          type: number
-        maxzoom:
-          type: number
-        paint:
-          type: object
-    mb-sprite-index:
-      type: object
-      additionalProperties:
-        $ref: '#/components/schemas/mb-sprite-index-symbol'
-    mb-sprite-index-symbol:
-      type: object
-      required:
-        - width
-        - height
-        - x
-        - 'y'
-        - pixelRatio
-      properties:
-        width:
-          type: integer
-          example: 32
-        height:
-          type: integer
-          example: 32
-        x:
-          type: integer
-          example: 0
-        y:
-          type: integer
-          example: 0
-        pixelRatio:
-          type: number
-          example: 1
-    style-set:
-      type: object
-      required:
-        - styles
-      properties:
-        styles:
-          type: array
-          nullable: true
-          items:
-            $ref: '#/components/schemas/style-set-entry'
-          example:
-            - id: 'night'
-              title: 'Topographic night style'
-              links:
-              - href: 'https://example.com/api/1.0/styles/night?f=mapbox'
-                type: 'application/vnd.mapbox.style+json'
-                rel: 'stylesheet'
-              - href: 'https://example.com/api/1.0/styles/night?f=sld10'
-                type: 'application/vnd.ogc.sld+xml;version=1.0'
-                rel: 'stylesheet'
-              - href: 'https://example.com/api/1.0/styles/night/metadata?f=json'
-                type: 'application/json'
-                rel: 'describedBy'
-            - id: 'topographic'
-              title: 'Regular topographic style'
-              links:
-              - href: 'https://example.com/api/1.0/styles/topographic?f=mapbox'
-                type: 'application/vnd.mapbox.style+json'
-                rel: 'stylesheet'
-              - href: 'https://example.com/api/1.0/styles/topographic?f=sld10'
-                type: 'application/vnd.ogc.sld+xml;version=1.0'
-                rel: 'stylesheet'
-              - href: 'https://example.com/api/1.0/styles/topographic/metadata?f=json'
-                type: 'application/json'
-                rel: 'describedBy'
-    style-set-entry:
-      type: object
-      nullable: true
-      required:
-        - id
-        - links
-      properties:
-        id:
-          type: string
-          format: uuid
-          nullable: true
-        title:
-          type: string
-          nullable: true
-        links:
-          type: array
-          nullable: true
-          minItems: 1
-          items:
-            $ref: '#/components/schemas/link'
-    stylesheet:
-      type: object
-      nullable: true
-      required:
-        - link
-      properties:
-        title:
-          type: string
-          nullable: true
-        version:
-          type: string
-          nullable: true
-        specification:
-          type: string
-          format: url
-          nullable: true
-        native:
-          type: boolean
-          nullable: true
-        tilingScheme:
-          type: string
-          nullable: true
-        link:
-          $ref: '#/components/schemas/link'
-    tileSet:
-      type: object
-      required:
-        - tilejson
-        - tiles
-      properties:
-        tilejson:
-          type: string
-          pattern: "\\d+\\.\\d+\\.\\d+\\w?[\\w\\d]*"
-        name:
-          type: string
-        description:
-          type: string
-        version:
-          type: string
-          pattern: "\\d+\\.\\d+\\.\\d+\\w?[\\w\\d]*"
-        attribution:
-          type: string
-        template:
-          type: string
-        legend:
-          type: string
-        scheme:
-          type: string
-        tiles:
-          type: array
-          items:
-            type: string
-        grids:
-          type: array
-          items:
-            type: string
-        data:
-          type: array
-          items:
-            type: string
-        minzoom:
-          minimum: 0
-          maximum: 30
-          type: integer
-        maxzoom:
-          minimum: 0
-          maximum: 30
-          type: integer
-        bounds:
-          type: array
-          items:
-            type: number
-            format: double
-        center:
-          type: array
-          items:
-            type: number
-        vector_layers:
-          type: array
-          items:
-            $ref: '#/components/schemas/layer'
-    layer:
-      type: object
-      properties:
-        id:
-          type: string
-        description:
-          type: string
-        queries:
-          type: array
-          items:
-            $ref: '#/components/schemas/query'
-    query:
-      type: object
-      properties:
-        minzoom:
-          type: integer
-        maxzoom:
-          type: integer
-        sql:
-          type: string
-
-
